[package]
name = "saoleile"
version = "0.1.0"
authors = ["Chris Foster <cdbfoster@gmail.com>"]
edition = "2018"

[dependencies]
egli = "0.5"
event_derive = { path = "event_derive" }
gl = "0.14"
lazy_static = "1.4"
serde = "1.0"
serde_cbor = "0.11"
typetag = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = "0.20"

[target.'cfg(target_os = "android")'.dependencies]
log-sys = { path = "android/log-sys" }

[lib]
name = "saoleile"
path = "src/lib.rs"

[[bin]]
name = "saoleile"
path = "src/run.rs"